--- a/paginas/pagina7.html
+++ b/paginas/pagina7.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <header>
-        <a href="/index.html" class="btn-inicio">Inicio</a>
+        <a href="../index.html" class="btn-inicio">Inicio</a>
         <h1>Problemas da Urbanidade</h1>
         <h2>Problemas da Cultura na Urbanidade</h2>
         <div>
@@ -89,3 +89,4 @@
     </main>
 </body>
 </html>
+
