--- a/paginas/alunos.html
+++ b/paginas/alunos.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <header>
-        <a href="/index.html" class="btn-inicio">Inicio</a>
+        <a href="../index.html" class="btn-inicio">Inicio</a>
         <h1>Problemas da Urbanidade</h1>
         <h2>Problemas da Cultura na Urbanidade</h2>
         <div>
