--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">HOMOGENIZAÇÃO CULTURAL</h3>
+        <p style="text-align: center; font-size: 25px">A homogeneidade cultural é um fenômeno onde as<br> 
+práticas e valores de uma cultura se espalham<br>
+rapidamente sobre as fronteiras nacionais.</p>
+        <p style="text-align: center; font-size: 25px">Ela pode levar a uma "cultura do consumo", onde as <br>
+escolhas culturais são impulsionadas por marcas e <br>
+produtos globais, em vez de tradições locais. 
+</p>
+        <img src="https://online.pucrs.br/hs-fs/hubfs/blog-images/featured-image-1752069425282.jpeg?width=871&height=443&name=featured-image-1752069425282.jpeg" style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
     </main>
 </body>
 </html>
+
