--- a/paginas/alunos.html
+++ b/paginas/alunos.html
@@ -79,15 +79,16 @@
 
     <main>
         <p style="text-align: center; font-size: 25px; margin-top: 100px">
-		Nome1<br>
-		Nome2<br>
-		Nome3<br>
-		Nome4<br>
-		Nome5<br>
-		Nome6<br>
-		Nome7<br>
+		Enzo de Moura Grau<br>
+		Maria Luiza Tazinafo<br>
+		Thais Moraes<br>
+		Arthur Martins<br>
+		Mariana Marano<br>
+		Isabella de Freitas Augusto<br>
+		Maria Sophia Abreu<br>
 		9M3
 		</p>
     </main>
 </body>
 </html>
+
