--- a/paginas/pagina1.html
+++ b/paginas/pagina1.html
@@ -77,15 +77,20 @@
             <a href="alunos.html" class="btn btn-alunos">Alunos</a>
         </div>
     </header>
-
+	</header>
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Gentrificação</h3>
+        <p style="text-align: center; font-size: 25px">Gentrificação refere-se à transformação de bairros antes<br>
+considerados menos valorizados.</p>
+        <p style="text-align: center; font-size: 25px">Ela acontece por meio de um processo gradual com<br>
+poder financeiro mais alto.</p>
+		<p style="text-align: center; font-size: 25px">Traz várias consequências, como o deslocamento de <br>
+moradores locais e mudanças na infraestrutura e <br>
+serviços. </p>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJh4Cv2nB5j-Q3ck8dNYisdtT3IYS34hKdEA&s" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
+
