--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@ rapidamente sobre as fronteiras nacionais.</p>
 escolhas culturais são impulsionadas por marcas e <br>
 produtos globais, em vez de tradições locais. 
 </p>
-        <img src="https://online.pucrs.br/hs-fs/hubfs/blog-images/featured-image-1752069425282.jpeg?width=871&height=443&name=featured-image-1752069425282.jpeg" style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://online.pucrs.br/hs-fs/hubfs/blog-images/featured-image-1752069425282.jpeg?width=871&height=443&name=featured-image-1752069425282.jpeg" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
+
 
