--- a/paginas/pagina2.html
+++ b/paginas/pagina2.html
@@ -79,13 +79,18 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Perda de Espaços Públicos</h3>
+        <p style="text-align: center; font-size: 25px">A perda de espaços públicos é um problema<br> 
+crescente nas cidades modernas</p>
+        <p style="text-align: center; font-size: 25px">Isso limita o direito à cidade e enfraquece a <br>
+cidadania</p>
+		<p style="text-align: center; font-size: 25px">A falta de espaços abertos gratuitos prejudica,<br> 
+principalmente, populações de baixa renda, que <br>
+têm menos acesso a opções de lazer pagas.</p>
 
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://imgsapp.em.com.br/app/noticia_127983242361/2015/05/27/651739/20150527005604690296o.jpg" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
