--- a/paginas/pagina3.html
+++ b/paginas/pagina3.html
@@ -79,13 +79,20 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Acesso Desigual à Cultura</h3>
+        <p style="text-align: center; font-size: 25px">O acesso desigual à cultura é uma realidade nas <br>
+cidades brasileiras</p>
+        <p style="text-align: center; font-size: 25px">Moradores de periferias e áreas afastadas muitas<br>
+vezes não contam com teatros, museus, cinemas <br>
+ou centros culturais próximos.</p>
+		<p style="text-align: center; font-size: 25px">Além disso, o preço dos ingressos e a falta de <br>
+políticas públicas de incentivo tornam o consumo <br> 
+cultural restrito a grupos com maior renda..</p>
 
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://static.todamateria.com.br/upload/ch/ar/charge_meia_entrada.jpg" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
+
