--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -79,13 +79,17 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Choque Cultural</h3>
+        <p style="text-align: center; font-size: 25px">O choque cultural acontece quando saímos de <br>
+nossa cultura e aterrissamos numa outra fase de <br>
+vida na nova cultura.</p>
+        <p style="text-align: center; font-size: 25px">Esse período é onde percebe-se que nem todas <br>
+as coisas são tão legais e algumas são bem 
+chatas.</p>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://imgsapp.em.com.br/app/noticia_127983242361/2015/05/27/651739/20150527005604690296o.jpg" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
+
