--- a/paginas/pagina5.html
+++ b/paginas/pagina5.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -79,13 +80,13 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Mercantilismo Cultural</h3>
+        <p style="text-align: center; font-size: 25px">Propõe uma reflexão processual a <br>
+respeito de como a cultura tornou-se <br>mercadoria no modo de produção capitalista.</p>
 
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_ADkmqrlRP5jXkxfzM5dMlkKobhU64tF-zw&s" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
