--- a/paginas/pagina7.html
+++ b/paginas/pagina7.html
@@ -79,13 +79,16 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">TITULO</h3>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-        <p style="text-align: center; font-size: 25px">Texto</p>
-
-        <div style="background-color: black; color: white; border-radius: 20px; padding: 50px; max-width: 600px; margin: 30px auto; text-align: center;">
-            IMAGEM
-        </div>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Esquecimento da Memória Histórica</h3>
+        <p style="text-align: center; font-size: 25px">Ao longo da história, observamos momentos em <br>
+que documentos, monumentos e outros símbolos 
+da memória de<br> um povo foram alvos de 
+destruição e mutilação</p>
+        <p style="text-align: center; font-size: 25px">Com o objetivo de apagar de suas memórias, <br>
+histórias e identidades.</p>
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Aa0sdkarlde5KPnTKQCg3GIj-GMd06pAQg&s" style="border-radius: 20px" width="600">
+		</div>
     </main>
 </body>
 </html>
