--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
 
     <main>
-        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">HOMOGENIZAÇÃO CULTURAL</h3>
+        <h3 style="color: #f4d54c; text-align: center; font-size: 50px">Homogenização Cultural</h3>
         <p style="text-align: center; font-size: 25px">A homogeneidade cultural é um fenômeno onde as<br> 
 práticas e valores de uma cultura se espalham<br>
 rapidamente sobre as fronteiras nacionais.</p>
@@ -78,5 +78,6 @@ produtos globais, em vez de tradições locais.
     </main>
 </body>
 </html>
+
 
 
