--- a/paginas/pagina4.html
+++ b/paginas/pagina4.html
@@ -86,10 +86,9 @@ vida na nova cultura.</p>
         <p style="text-align: center; font-size: 25px">Esse período é onde percebe-se que nem todas <br>
 as coisas são tão legais e algumas são bem 
 chatas.</p>
-		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
-			<img src="https://imgsapp.em.com.br/app/noticia_127983242361/2015/05/27/651739/20150527005604690296o.jpg" style="border-radius: 20px" width="600">
+		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 400px; margin: 30px auto; text-align: center;"> 
+			<img src="https://i.scdn.co/image/ab67656300005f1f0a538037d272377260d22815" style="border-radius: 20px" width="400">
 		</div>
     </main>
 </body>
 </html>
-
