--- a/paginas/pagina7.html
+++ b/paginas/pagina7.html
@@ -37,9 +37,15 @@
             background-color: #96790a;
         }
         .btn-alunos {
-            float: right;
-            margin-right: 20px;
-            margin-top: -70px;
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            background-color: #b28e0b;
+            color: white;
+            padding: 15px 55px;
+            border-radius: 15px;
+            text-decoration: none;
+            font-weight: bold;
         }
         .btn-inicio {
             position: absolute;
@@ -92,3 +98,4 @@ histórias e identidades.</p>
     </main>
 </body>
 </html>
+
