--- a/paginas/pagina2.html
+++ b/paginas/pagina2.html
@@ -95,9 +95,10 @@ principalmente, populações de baixa renda, que <br>
 têm menos acesso a opções de lazer pagas.</p>
 
 		<div style="background-color: black; color: white; border-radius: 20px; padding: 10px; max-width: 600px; margin: 30px auto; text-align: center;"> 
-			<img src="https://imgsapp.em.com.br/app/noticia_127983242361/2015/05/27/651739/20150527005604690296o.jpg" style="border-radius: 20px" width="600">
+			<img src="https://jpimg.com.br/uploads/2021/06/pxp20210529014.jpg" style="border-radius: 20px" width="600">
 		</div>
     </main>
 </body>
 </html>
+
 
