--- a/paginas/alunos.html
+++ b/paginas/alunos.html
@@ -37,9 +37,14 @@
         }
         .btn-alunos-pressionado {
 			background-color: #635600;
-            float: right;
-            margin-right: 20px;
-            margin-top: -70px;
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            color: white;
+            padding: 15px 55px;
+            border-radius: 15px;
+            text-decoration: none;
+            font-weight: bold;
         }
         .btn-inicio {
             position: absolute;
@@ -91,4 +96,5 @@
     </main>
 </body>
 </html>
+
 
